--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,9 +22,7 @@
 @use "blocks/hero.scss";
 @use "blocks/hero-link.scss";
 @use "blocks/type-products.scss";
-@use "blocks/week-product-title.scss";
 @use "blocks/week-product.scss";
-@use "blocks/week-product-description.scss";
 @use "blocks/week-product-table.scss";
 @use "blocks/transparent-button.scss";
 @use "blocks/about-us.scss";
@@ -46,3 +44,4 @@
 @use "blocks/nav-list.scss";
 @use "blocks/contacts-title.scss";
 @use "blocks/mail-link.scss";
+@use "blocks/week-title.scss";
