--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -15,6 +15,10 @@
     padding-top: 41.5px;
     padding-bottom: 83px;
   }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding: 68px 247px 89px 175px;
+  }
 }
 
 .about-us__title {
@@ -25,5 +29,11 @@
   @media (min-width: variables.$screen-tablet) {
     font-size: 43px;
     line-height: 50px;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding-left: 175px;
+    font-size: 53px;
+    line-height: 57px;
   }
 }
