--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,7 +1,7 @@
 @use "../global/variables.scss";
 
 .hero {
-  background-image:  url("../img/hero/hero_mobile.webp");
+  background-image: url("../img/hero/hero_mobile.webp");
   background-repeat: no-repeat;
   background-position: top;
   background-size: contain;
@@ -10,12 +10,32 @@
   position: relative;
   z-index: 0;
 
+  @media (min-width: variables.$screen-tablet) {
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 24px;
+      background-image: url("../img/zigzag_line_hero.svg");
+      background-repeat: no-repeat;
+      background-position: bottom;
+      background-size: auto;
+      z-index: 0;
+      position: absolute;
+      bottom: -6px;
+    }
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    margin-bottom: 54px;
+  }
+
   @media (min-resolution: 2dppx) {
     background-image: url("../img/hero/hero_mobile@2x.webp");
   }
 
   @media (min-width: 447px) {
-    background-image:  url("../img/hero/hero_tablet.webp");
+    background-image: url("../img/hero/hero_tablet.webp");
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
@@ -24,7 +44,7 @@
   }
 
   @media (min-width: 769px) {
-    background-image:  url("../img/hero/hero_desktop.webp");
+    background-image: url("../img/hero/hero_desktop.webp");
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/hero/hero_desktop@2x.webp");
@@ -40,11 +60,15 @@
   @media (min-width: variables.$screen-tablet) {
     display: flex;
   }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding: 0 50px;
+  }
 }
 
 .hero__title {
   text-align: center;
-  font-size: clamp(27px, 5vw, 43px);
+  font-size: clamp(27px, 5vw, 53px);
   line-height: clamp(30px, 5vw, 57px);
   padding: 90px 30px 249px;
   width: clamp(260px, 87vw, 668px);
@@ -52,5 +76,9 @@
 
   @media (min-width: variables.$screen-tablet) {
     padding-top: 154px;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    width: 700px;
   }
 }
