--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -27,8 +27,6 @@
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
-
-
 }
 
 .page__modal {
@@ -38,7 +36,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: rgba(255,255,255,0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   z-index: 2;
 
   &--closed {
