--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -7,7 +7,7 @@
     display: block;
     width: 100%;
     height: 6px;
-    background-image: url(../img/zigzag_line.svg);
+    background-image: url("../img/zigzag_line.svg");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: auto;
@@ -17,6 +17,7 @@
 
   position: relative;
   @media (min-width: variables.$screen-tablet) {
+
     &::before {
       content: "";
       display: block;
@@ -39,6 +40,16 @@
       height: 17px;
     }
   }
+
+  @media (min-width: variables.$screen-desktop) {
+    &::before {
+      display: none;
+    }
+
+    &::after {
+      height: 23px;
+    }
+  }
 }
 
 .reviews__wrapper {
@@ -47,6 +58,25 @@
 
   @media (min-width: variables.$screen-tablet) {
     padding-bottom: 115px;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    &::before {
+      content: "";
+      display: block;
+      background-image: url("../img/review.webp");
+      background-repeat: no-repeat;
+      background-position: left;
+      background-size: auto 457px;
+      background-color: #e2e2e2;
+      width: 350px;
+      height: 457px;
+      position: absolute;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/review@2x.webp");
+      }
+    }
   }
 }
 
@@ -64,6 +94,14 @@
     padding-top: 82.5px;
     padding-bottom: 38.5px;
   }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding-left: 175px;
+    position: relative;
+    z-index: 1;
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
 
 .reviews__description {
@@ -77,12 +115,25 @@
     white-space: break-spaces;
     padding-bottom: 61px;
   }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding-left: 175px;
+    position: relative;
+    z-index: 1;
+    padding-bottom: 44px;
+  }
 }
 
 .reviews__container {
   @media (min-width: variables.$screen-tablet) {
     display: flex;
     justify-content: space-between;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    position: relative;
+    z-index: 1;
+    padding-left: 175px;
   }
 }
 
@@ -92,9 +143,6 @@
   @media (min-width: variables.$screen-tablet) {
     flex-basis: 137px;
   }
-}
-
-.reviews::after {
 }
 
 .reviews__button {
