--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -6,6 +6,7 @@
 
 .main-footer__wrapper {
   padding-bottom: 38px;
+  max-width: 1150px;
 
   @media (min-width: variables.$screen-tablet) {
     padding-top: 51px;
