--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -14,14 +14,12 @@
   color: #000000;
   margin: 0;
   text-wrap: balance;
-
   min-height: 100%;
-  background-color: #eeeeee;
 }
 
 .page__container {
   min-width: 320px;
-  max-width: 1150px;
+  // max-width: 1150px;
   min-height: 100%;
   margin: 0 auto;
   display: flex;
