--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -15,11 +15,11 @@
       content: "";
       display: block;
       width: 100%;
-      height: 24px;
+      height: 32px;
       background-image: url("../img/zigzag_line_hero.svg");
       background-repeat: no-repeat;
       background-position: bottom;
-      background-size: auto;
+      background-size: cover;
       z-index: 0;
       position: absolute;
       bottom: -6px;
