--- a/source/sass/blocks/nav-list.scss
+++ b/source/sass/blocks/nav-list.scss
@@ -5,21 +5,26 @@
     display: flex;
     align-self: flex-end;
     order: 1;
-    margin-right: 14px;
+    width: fit-content;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+   max-width: 400px;
   }
 }
+
 
 .nav-list__secondary {
   @media (min-width: variables.$screen-tablet) {
     display: flex;
-    flex-wrap: wrap;
     order: 2;
     width: 43.62vw;
   }
 
   @media (min-width: variables.$screen-desktop) {
     position: absolute;
+    flex-direction: column;
     gap: 0 41px;
-    max-width: 435px;
+    max-width: 790px;
   }
 }
