--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -45,3 +45,4 @@
 @use "blocks/contacts-title.scss";
 @use "blocks/mail-link.scss";
 @use "blocks/week-title.scss";
+@use "blocks/list-secondary.scss";
