--- a/source/sass/blocks/hero-link-title.scss
+++ b/source/sass/blocks/hero-link-title.scss
@@ -2,4 +2,8 @@
 
 .hero-link-title__text {
   flex-basis: 130px;
+
+  @media (min-width: variables.$screen-tablet) {
+    flex-basis: 185px;
+  }
 }
