--- a/source/sass/blocks/slider-author.scss
+++ b/source/sass/blocks/slider-author.scss
@@ -1,6 +1,6 @@
 @use "../global/variables.scss";
 
-.reviews-author {
+.slider-author {
   font-size: 17px;
   font-weight: 700;
   line-height: 24px;
@@ -11,7 +11,7 @@
   }
 }
 
-.reviews-author__mail {
+.slider-author__mail {
   color: #444444;
   font-size: 17px;
   font-weight: 400;
