--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,7 +29,7 @@
 @use "blocks/about-us-list.scss";
 @use "blocks/about-us-item.scss";
 @use "blocks/reviews.scss";
-@use "blocks/reviews-author.scss";
+@use "blocks/slider-author.scss";
 @use "blocks/slider.scss";
 @use "blocks/contacts-mail.scss";
 @use "blocks/contacts-adress.scss";
@@ -46,3 +46,4 @@
 @use "blocks/mail-link.scss";
 @use "blocks/week-title.scss";
 @use "blocks/list-secondary.scss";
+@use "blocks/slider-buttons.scss";
