--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,14 +1,56 @@
 @use "../global/variables.scss";
 
-.hero {
-  background-image: url("../img/hero/hero_mobile.webp");
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: contain;
-  background-color: #e2e2e2;
-  min-height: clamp(520px, 97.13vw, 746px);
-  position: relative;
-  z-index: 0;
+.hero__container {
+  &--index {
+    background-image: url("../img/hero/hero_mobile.webp");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: contain;
+    background-color: #e2e2e2;
+    min-height: clamp(520px, 97.13vw, 746px);
+    position: relative;
+    z-index: 0;
+
+    @media (min-width: variables.$screen-tablet) {
+      &::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 32px;
+        background-image: url("../img/zigzag_line_hero.svg");
+        background-repeat: repeat-x;
+        background-position: bottom;
+        z-index: 0;
+        position: absolute;
+        bottom: -6px;
+      }
+    }
+
+    @media (min-width: variables.$screen-desktop) {
+      margin-bottom: 54px;
+    }
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/hero/hero_mobile@2x.webp");
+    }
+
+    @media (min-width: 447px) {
+      background-image: url("../img/hero/hero_tablet.webp");
+      background-size: cover;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/hero/hero_tablet@2x.webp");
+      }
+    }
+
+    @media (min-width: 769px) {
+      background-image: url("../img/hero/hero_desktop.webp");
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/hero/hero_desktop@2x.webp");
+      }
+    }
+  }
 
   &--form {
     background-image: none;
@@ -16,51 +58,30 @@
     @media (min-resolution: 2dppx) {
       background-image: none;
     }
-  }
 
-  @media (min-width: variables.$screen-tablet) {
-    &::after {
-      content: "";
-      display: block;
-      width: 100%;
-      height: 32px;
-      background-image: url("../img/zigzag_line_hero.svg");
-      background-repeat: repeat-x;
-      background-position: bottom;
-      // background-size: cover;
-      z-index: 0;
-      position: absolute;
-      bottom: -6px;
-    }
-  }
+    background-color: #e2e2e2;
+    min-height: 177px;
+    position: relative;
+    z-index: 0;
 
-  @media (min-width: variables.$screen-desktop) {
-    margin-bottom: 54px;
-  }
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/hero/hero_mobile@2x.webp");
-  }
-
-  @media (min-width: 447px) {
-    background-image: url("../img/hero/hero_tablet.webp");
-    background-size: cover;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/hero/hero_tablet@2x.webp");
-    }
-  }
-
-  @media (min-width: 769px) {
-    background-image: url("../img/hero/hero_desktop.webp");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/hero/hero_desktop@2x.webp");
+    @media (min-width: variables.$screen-tablet) {
+      &::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 32px;
+        background-image: url("../img/zigzag_line_hero.svg");
+        background-repeat: repeat-x;
+        background-position: bottom;
+        z-index: 0;
+        position: absolute;
+        bottom: -6px;
+      }
     }
   }
 }
 
-.hero__container {
+.hero__type {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -90,4 +111,16 @@
   @media (min-width: variables.$screen-desktop) {
     width: 700px;
   }
+
+  &--form {
+    padding: 73.5px 0;
+  }
+}
+
+.hero__description {
+  background-color: #ffffff;
+  color: #444;
+  font-size: 13px;
+  line-height: 24px;
+  padding: 17px 30px 29px;
 }
