--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -47,3 +47,10 @@
 @use "blocks/week-title.scss";
 @use "blocks/list-secondary.scss";
 @use "blocks/slider-buttons.scss";
+@use "blocks/legend.scss";
+@use "blocks/type-list.scss";
+@use "blocks/form.scss";
+@use "blocks/fieldset.scss";
+@use "blocks/color.scss";
+@use "blocks/name.scss";
+@use "blocks/type.scss";
