--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -8,7 +8,22 @@
   padding-bottom: 25px;
 }
 
-
 .form__name {
   padding-bottom: 34.5px;
+}
+
+.form__phone {
+  padding-bottom: 34.5px;
+}
+
+.form__email {
+  padding-bottom: 34.5px;
+}
+
+.form__add {
+  padding-bottom: 17px;
+}
+
+.form__button {
+  padding-bottom: 55px;
 }
