--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -54,3 +54,7 @@
 @use "blocks/color.scss";
 @use "blocks/name.scss";
 @use "blocks/type.scss";
+@use "blocks/phone.scss";
+@use "blocks/email.scss";
+@use "blocks/add.scss";
+@use "blocks/form-button.scss";
