--- a/source/sass/blocks/color.scss
+++ b/source/sass/blocks/color.scss
@@ -12,7 +12,7 @@
 
 .color__description {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 23px;
   position: relative;
 
@@ -22,6 +22,7 @@
     width: 38px;
     height: 38px;
     border: 2px solid #444444;
+    flex-shrink: 0;
   }
 
   &::after {
@@ -35,9 +36,46 @@
     background-position: center;
     position: absolute;
     left: 7.7px;
+    top: 11px;
+    flex-shrink: 0;
   }
+}
+
+.color__text {
+  padding-top: 8px;
 }
 
 .color__input:checked + .color__description::after {
   display: block;
+}
+
+.color__label:hover {
+  .color__description::before {
+    transition: border-color 0.2s;
+    border-color: #62d1ba;
+  }
+}
+
+.color__label:active {
+  .color__description::before {
+    transition: border-color 0.2s;
+    border-color: rgba(0, 0, 0, 0.3);
+  }
+}
+
+.color__input:focus + .color__description::before {
+  outline: 2px solid #000000;
+  outline-offset: 3px;
+  transition: border-color 0.2s;
+  border-color: #62d1ba;
+}
+
+.color__label:has(.color__input:disabled) {
+  opacity: 0.5;
+}
+
+.color__label:hover:has(.color__input:disabled) {
+  .color__description::before {
+    border-color: #444444;
+  }
 }
