--- a/source/sass/blocks/email.scss
+++ b/source/sass/blocks/email.scss
@@ -1,7 +1,20 @@
 @use "../global/variables.scss";
 
+.email {
+  @media (min-width: variables.$screen-tablet) {
+    background-color: #f1f1f1;
+  }
+}
+
 .email__title {
   padding-bottom: 4.5px;
+
+  @media (min-width: variables.$screen-tablet) {
+    position: absolute;
+    max-width: 255px;
+    word-break: break-all;
+    white-space: inherit;
+  }
 }
 
 .email__label {
@@ -45,6 +58,11 @@
   &:disabled {
     border-color: #000000;
   }
+
+  @media (min-width: variables.$screen-tablet) {
+    flex-grow: 1;
+    padding-left: 18px;
+  }
 }
 
 .email__input::placeholder {
@@ -55,6 +73,10 @@
   font-weight: 400;
   line-height: 18px;
   opacity: 0.3;
+
+  @media (min-width: variables.$screen-tablet) {
+    font-size: 19px;
+  }
 }
 
 
