--- a/source/sass/blocks/fieldset.scss
+++ b/source/sass/blocks/fieldset.scss
@@ -1,10 +1,9 @@
-@import "../global/mixin";
+@use "../global/variables.scss";
 
 .fieldset {
   border: none;
   padding-left: 0;
   padding-right: 0;
-  padding-top: 0;
   margin: 0;
 }
 
@@ -13,6 +12,12 @@
     display: flex;
     flex-direction: column;
     gap: 23px;
+
+    @media (min-width: variables.$screen-tablet) {
+      padding-left: 217px;
+      display: grid;
+      grid-template-columns: repeat(2, 248px);
+    }
   }
 
   &--name {
@@ -20,5 +25,26 @@
     flex-direction: column;
     gap: 22px;
 
+    @media (min-width: variables.$screen-tablet) {
+      padding-left: 217px;
+    }
+  }
+
+  &--phone {
+    @media (min-width: variables.$screen-tablet) {
+      padding-left: 217px;
+    }
+  }
+
+  &--email {
+    @media (min-width: variables.$screen-tablet) {
+      padding-left: 217px;
+    }
+  }
+
+  &--add {
+    @media (min-width: variables.$screen-tablet) {
+      padding-left: 217px;
+    }
   }
 }
