--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -22,6 +22,7 @@
 
   @media (min-width: variables.$screen-tablet) {
     padding: 0 50px;
+    border-bottom: 1px solid #ececec;
   }
 }
 
@@ -32,6 +33,7 @@
   @media (min-width: variables.$screen-tablet) {
     padding: 22px 0 20px;
     position: relative;
+    z-index: 1;
   }
 
   @media (min-width: variables.$screen-desktop) {
@@ -151,133 +153,6 @@
 
 .main-nav__item {
   position: relative;
-
-  // &--search {
-  //   &::before {
-  //     content: "";
-  //     mask-image: url("../img/stack/sprite.svg#search");
-  //     flex-shrink: 0;
-  //     width: 18px;
-  //     height: 18px;
-  //     mask-position: center;
-  //     mask-repeat: no-repeat;
-  //     mask-size: cover;
-  //     background-color: #000000;
-  //     opacity: 0.2;
-  //     display: block;
-  //     position: absolute;
-  //     left: 30px;
-  //     top: 32px;
-  //   }
-  // }
-
-  // &--cart {
-  //   &::before {
-  //     content: "";
-  //     mask-image: url("../img/stack/sprite.svg#cart");
-  //     flex-shrink: 0;
-  //     width: 21px;
-  //     height: 22px;
-  //     mask-position: center;
-  //     mask-repeat: no-repeat;
-  //     mask-size: cover;
-  //     background-color: #000000;
-  //     opacity: 0.2;
-  //     display: block;
-  //     position: absolute;
-  //     left: 30px;
-  //     top: 30px;
-  //   }
-  // }
-
-  // &:last-child {
-  //   border-bottom: 1px solid #ececec;
-  // }
-
-  // &:hover {
-  //   &::before {
-  //     transition: 0.2s;
-  //     background-color: #63d1bb;
-  //     opacity: 1;
-  //   }
-
-  //   .main-nav__link {
-  //     transition: 0.2s;
-  //     opacity: 0.6;
-  //   }
-  // }
-
-  // &:active {
-  //   &::before {
-  //     transition: 0.2s;
-  //     opacity: 0.3;
-  //   }
-
-  //   .main-nav__link {
-  //     transition: 0.2s;
-  //     opacity: 0.3;
-  //   }
-  // }
-
-  // @media (min-width: variables.$screen-tablet) {
-
-    // &:last-child {
-    //   border-bottom: none;
-    // }
-
-    // &--search {
-    //   order: 1;
-    //   padding: 36px 33px 34px;
-    //   min-height: 88px;
-    //   border-left: 1px solid #ececec;
-    //   border-right: 1px solid #ececec;
-    //   flex-shrink: 0;
-
-    //   &::before {
-    //     @include absolute-center;
-    //   }
-    // }
-
-    // &--cart {
-    //   order: 2;
-    //   padding: 32.5px 0 31.5px 53px;
-
-    //   &::before {
-    //     left: 30px;
-    //     top: 32px;
-    //   }
-    // }
-
-    // &--secondary {
-    //   flex-basis: 150px;
-    //   padding: 20.5px 0;
-    //   flex-shrink: 0;
-    // }
-  // }
-
-  // @media (min-width: variables.$screen-desktop) {
-  //   &--catalog,
-  //   &--order {
-  //     font-size: 17px;
-  //     line-height: 24px;
-  //     padding: 32.5px 0 31.5px;
-  //   }
-
-  //   &--sale,
-  //   &--new {
-  //     display: block;
-  //     font-size: 15px;
-  //     line-height: 24px;
-  //   }
-
-  //   &--secondary {
-  //     flex-basis: 167px;
-  //   }
-
-  //   &--hero {
-  //     flex-basis: fit-content;
-  //   }
-  // }
 }
 
 .main-nav__link {
@@ -371,11 +246,15 @@
 
     &--cart {
       order: 2;
-      padding: 32.5px 0 31.5px 53px;
+      padding: 32.5px 0 31.5px 31px;
+      display: flex;
+      align-items: center;
+      gap: 20px;
 
       &::before {
-        left: 30px;
-        top: 32px;
+        position: relative;
+        left: 0;
+        top: 0;
       }
     }
 
@@ -408,6 +287,10 @@
     &--hero {
       flex-basis: fit-content;
     }
+
+    &--secondary:first-child {
+      border-right: 1px solid #ececec;
+    }
   }
 
   &:hover {
@@ -419,20 +302,6 @@
       transition: 0.2s;
       opacity: 0.3;
   }
-
-  // &--active {
-  //   @media (min-width: variables.$screen-tablet) {
-  //     color: #766357;
-
-  //     &:hover {
-  //       opacity: 1;
-  //     }
-
-  //     &:active {
-  //       opacity: 1;
-  //     }
-  //   }
-  // }
 }
 
 .main-nav__free-delivery {
@@ -450,6 +319,7 @@
     position: absolute;
     top: 88.5px;
     right: 0;
+    max-width: 265px;
   }
 
   @media (min-width: variables.$screen-desktop) {
