--- a/source/sass/blocks/week-title.scss
+++ b/source/sass/blocks/week-title.scss
@@ -1,6 +1,10 @@
 @use "../global/variables.scss";
 
 .week-title__text {
+  @media (min-width: variables.$screen-tablet) {
+    max-width: 540px;
+  }
+
   @media (min-width: variables.$screen-desktop) {
     order: 2;
   }
