--- a/source/sass/blocks/email.scss
+++ b/source/sass/blocks/email.scss
@@ -9,12 +9,13 @@
 .email__title {
   padding-bottom: 4.5px;
 
-  @media (min-width: variables.$screen-tablet) {
-    position: absolute;
-    max-width: 255px;
-    word-break: break-all;
-    white-space: inherit;
-  }
+  // @media (min-width: variables.$screen-tablet) {
+  //   position: absolute;
+  //   left: 0;
+  //   max-width: 255px;
+  //   word-break: break-all;
+  //   white-space: inherit;
+  // }
 }
 
 .email__label {
