--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -9,7 +9,7 @@
 .hero__container {
   &--index {
     background-image: url("../img/hero/hero_mobile.webp");
-    background-repeat: no-repeat;
+    background-repeat: unset;
     background-position: top;
     background-size: contain;
     background-color: #e2e2e2;
@@ -72,19 +72,28 @@
 
     @media (min-width: variables.$screen-tablet) {
       margin-bottom: 54px;
-      min-height: 226px;
+      min-height: 238px;
 
       &::after {
         content: "";
         display: block;
         width: 100%;
-        height: 32px;
+        height: 24px;
         background-image: url("../img/zigzag_line_hero.svg");
         background-repeat: repeat-x;
         background-position: bottom;
         z-index: 0;
         position: absolute;
         bottom: -6px;
+      }
+    }
+
+    @media (min-width: variables.$screen-desktop) {
+      min-height: 272px;
+
+      &::after {
+        height: 34px;
+        background-size: cover;
       }
     }
   }
@@ -137,10 +146,18 @@
   color: #444;
   font-size: 13px;
   line-height: 24px;
-  padding: 17px 30px 29px;
+  padding-top: 17px;
+  padding-bottom: 29px;
 
   @media (min-width: variables.$screen-tablet) {
     font-size: 17px;
     line-height: 30px;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding-left: 217px;
+    padding-right: 217px;
+    white-space: initial;
+    max-width: 1150px;
   }
 }
