--- a/source/sass/blocks/legend.scss
+++ b/source/sass/blocks/legend.scss
@@ -6,7 +6,7 @@
   font-weight: 700;
   line-height: 16px;
   text-transform: uppercase;
-  padding: 0 30px;
+  // padding: 0 30px;
   display: flex;
   width: 100%;
   align-items: center;
@@ -24,10 +24,19 @@
   @media (min-width: variables.$screen-tablet) {
     padding: 0 50px;
     padding-top: 18px;
+    position: absolute;
+    max-width: 255px;
+    left: 0;
+    word-break: break-all;
+    white-space: inherit;
 
     &::after {
       display: none;
     }
   }
-}
 
+  @media (min-width: variables.$screen-tablet) {
+    padding: 0 96px;
+    padding-top: 18px;
+  }
+}
