--- a/source/sass/blocks/type-list.scss
+++ b/source/sass/blocks/type-list.scss
@@ -4,6 +4,11 @@
   display: flex;
   flex-direction: column;
   gap: 19px;
+
+  @media (min-width: variables.$screen-desktop) {
+    display: grid;
+    grid-template-columns: repeat(1, 500px);
+  }
 }
 
 .type-list__label {
