--- a/source/sass/blocks/type.scss
+++ b/source/sass/blocks/type.scss
@@ -3,12 +3,13 @@
 .type__title {
   padding-bottom: 30px;
 
-  @media (min-width: variables.$screen-tablet) {
-    position: absolute;
-    max-width: 255px;
-    word-break: break-all;
-    white-space: inherit;
-  }
+  // @media (min-width: variables.$screen-tablet) {
+  //   position: absolute;
+  //   max-width: 255px;
+  //   left: 0;
+  //   word-break: break-all;
+  //   white-space: inherit;
+  // }
 }
 
 .type__list {
