--- a/source/sass/blocks/week-product.scss
+++ b/source/sass/blocks/week-product.scss
@@ -93,7 +93,7 @@
 
   @media (min-width: variables.$screen-tablet) {
     grid-row: 2 / 3;
-    padding-bottom: 0;
+    padding-bottom: 10px;
   }
 
   @media (min-width: variables.$screen-desktop) {
@@ -123,11 +123,11 @@
   @media (min-width: variables.$screen-tablet) {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     font-size: 43px;
     line-height: 50px;
 
     &::after {
+      padding-top: 10px;
       text-align: center;
       line-height: 17px;
       flex-basis: 100px;
@@ -171,6 +171,7 @@
     padding-bottom: 0;
     font-size: 17px;
     line-height: 30px;
+    padding-bottom: 10px;
 
     &--price {
       font-size: 20px;
