--- a/source/sass/blocks/transparent-button.scss
+++ b/source/sass/blocks/transparent-button.scss
@@ -9,6 +9,7 @@
   line-height: 20px;
   text-transform: uppercase;
   border: 2px solid #444444;
+  word-wrap: break-word;
 
   &:hover {
     transition: 0.2s;
