--- a/source/sass/blocks/mail-link.scss
+++ b/source/sass/blocks/mail-link.scss
@@ -3,13 +3,8 @@
 .mail-link__text {
   position: relative;
   word-break: break-all;
-
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background-color: #62d1ba;
-  }
+  text-decoration: underline;
+  text-decoration-color: #62d1ba;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 6px;
 }
