--- a/source/sass/blocks/type-products.scss
+++ b/source/sass/blocks/type-products.scss
@@ -63,10 +63,10 @@
     .hero-link__title {
       transition: 0.2s;
       transform: translateY(-5px);
+    }
 
-      &::after {
-        opacity: 0.7;
-      }
+    .hero-link__title::after {
+      opacity: 0.7;
     }
   }
 
