--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -58,3 +58,5 @@
 @use "blocks/email.scss";
 @use "blocks/add.scss";
 @use "blocks/form-button.scss";
+@use "blocks/catalog.scss";
+@use "blocks/catalog-item.scss";
