--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -12,10 +12,11 @@
     background-repeat: unset;
     background-position: top;
     background-size: contain;
-    background-color: #e2e2e2;
-    min-height: clamp(520px, 97.13vw, 746px);
+    background-color: #f9f9f9;
+    min-height: clamp(520px, 120vw, 746px);
     position: relative;
     z-index: 0;
+    background-repeat-x: no-repeat;
 
     @media (min-width: variables.$screen-tablet) {
       &::after {
@@ -40,16 +41,16 @@
       background-image: url("../img/hero/hero_mobile@2x.webp");
     }
 
-    @media (min-width: 447px) {
+    @media (min-width: 400px) {
       background-image: url("../img/hero/hero_tablet.webp");
-      background-size: cover;
+      // background-size: cover;
 
       @media (min-resolution: 2dppx) {
         background-image: url("../img/hero/hero_tablet@2x.webp");
       }
     }
 
-    @media (min-width: 769px) {
+    @media (min-width: 1000px) {
       background-image: url("../img/hero/hero_desktop.webp");
 
       @media (min-resolution: 2dppx) {
